<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvStudInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/tvStudInfo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/tvDisplayNameLabel" />

        <TextView
            android:id="@+id/tvNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_action_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDisplayEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/tvDisplayEmailLabel" />

        <TextView
            android:id="@+id/tvEmailValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_action_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDisplayDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/tvDisplayDepartmentLabel" />

        <TextView
            android:id="@+id/tvDepartmentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_action_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDisplayMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:text="@string/tvDisplayMood" />

        <TextView
            android:id="@+id/tvMoodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_action_edit" />
    </LinearLayout>
</LinearLayout>
